remove unused method getRecoverId (#18197)
* can set some parameters of narayana in server.yaml

* remove nodeIdentifier and xaRecoveryNodes in narayana prop

* rm unused method getRecoveryId

--- a/shardingsphere-proxy/shardingsphere-proxy-bootstrap/src/main/resources/conf/server.yaml
+++ b/shardingsphere-proxy/shardingsphere-proxy-bootstrap/src/main/resources/conf/server.yaml
@@ -50,6 +50,12 @@
 #      recoveryStoreDataSource: com.mysql.jdbc.jdbc2.optional.MysqlDataSource
 #      recoveryStoreUser: root
 #      recoveryStorePassword: 12345678
+#      commitOnePhase: true
+#      transactionSync: false
+#      recoveryBackoffPeriod: 1
+#      defaultTimeout: 180
+#      expiryScanInterval: 12
+#      periodicRecoveryPeriod: 120
 #  - !SQL_PARSER
 #    sqlCommentParseEnabled: true
 #    sqlStatementCache:
