add logback.xml for shardingsphere-proxy when it started (#18199)

--- a/shardingsphere-charts/shardingsphere-proxy/templates/configmap.yaml
+++ b/shardingsphere-charts/shardingsphere-proxy/templates/configmap.yaml
@@ -23,3 +23,33 @@ metadata:
 data:
   server.yaml: |-
   {{- include "common.tplvalues.render" (dict "value" .Values.compute.serverConfig "context" $) | nindent 4 }}
+  logback.xml: |-
+    <?xml version="1.0"?>
+    <configuration>
+    <appender name="console" class="ch.qos.logback.core.ConsoleAppender">
+    <encoder>
+    <pattern>[%-5level] %d{yyyy-MM-dd HH:mm:ss.SSS} [%thread] %logger{36} - %msg%n</pattern>
+    </encoder>
+    </appender>
+    <logger name="org.apache.shardingsphere" level="info" additivity="false">
+    <appender-ref ref="console" />
+    </logger>
+
+    <logger name="com.zaxxer.hikari" level="error">
+    <appender-ref ref="console" />
+    </logger>
+
+    <logger name="com.atomikos" level="error">
+    <appender-ref ref="console" />
+    </logger>
+
+    <logger name="io.netty" level="error">
+    <appender-ref ref="console" />
+    </logger>
+
+    <root>
+    <level value="info" />
+    <appender-ref ref="console" />
+    </root>
+    </configuration>
+
