Narayana can set parameter 'createTable' (#18213)

--- a/shardingsphere-proxy/shardingsphere-proxy-bootstrap/src/main/resources/conf/server.yaml
+++ b/shardingsphere-proxy/shardingsphere-proxy-bootstrap/src/main/resources/conf/server.yaml
@@ -56,6 +56,9 @@
 #      defaultTimeout: 180
 #      expiryScanInterval: 12
 #      periodicRecoveryPeriod: 120
+#      createTable: true
+#      stateStoreCreateTable: true
+#      communicationStoreCreateTable: true
 #  - !SQL_PARSER
 #    sqlCommentParseEnabled: true
 #    sqlStatementCache:
