make assistEncryptorName work and effect (#18173)
* add AssistEncryptorName

* Update LocalEncryptConfiguration.java

* add assistEncryptorName for EncryptColumn

* make assistEncryptorName work and effect

* Update RC4EncryptAlgorithm.java

* align to previous

* Update EncryptRuleTest.java

* Update query-with-cipher.yaml

--- a/shardingsphere-jdbc/shardingsphere-jdbc-core/src/test/resources/config/config-encrypt-query-with-cipher.yaml
+++ b/shardingsphere-jdbc/shardingsphere-jdbc-core/src/test/resources/config/config-encrypt-query-with-cipher.yaml
@@ -31,7 +31,8 @@ rules:
         pwd:
           cipherColumn: cipher_pwd
           assistedQueryColumn: assist_pwd
-          encryptorName: jdbc_query_assisted_encryptor_fixture
+          encryptorName: jdbc_encryptor_fixture
+          assistedQueryEncryptorName: jdbc_query_assisted_encryptor_fixture
     t_encrypt_contains_column:
       columns:
         plain_pwd:
