--- a/shardingsphere-jdbc/shardingsphere-jdbc-core/src/test/resources/config/config-encrypt-query-with-plain.yaml
+++ b/shardingsphere-jdbc/shardingsphere-jdbc-core/src/test/resources/config/config-encrypt-query-with-plain.yaml
@@ -31,7 +31,8 @@ rules:
         pwd:
           cipherColumn: cipher_pwd
           assistedQueryColumn: assist_pwd
-          encryptorName: jdbc_query_assisted_encryptor_fixture
+          encryptorName: jdbc_encryptor_fixture
+          assistedQueryEncryptorName: jdbc_query_assisted_encryptor_fixture
     t_encrypt_contains_column:
       columns:
         plain_pwd:
