--- a/shardingsphere-features/shardingsphere-sharding/shardingsphere-sharding-distsql/shardingsphere-sharding-distsql-handler/pom.xml
+++ b/shardingsphere-features/shardingsphere-sharding/shardingsphere-sharding-distsql/shardingsphere-sharding-distsql-handler/pom.xml
@@ -38,6 +38,11 @@
             <artifactId>shardingsphere-sharding-distsql-statement</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.shardingsphere</groupId>
+            <artifactId>shardingsphere-sharding-distsql-parser</artifactId>
+            <version>${project.version}</version>
+        </dependency>
         <!-- TODO now depend on pipeline spi later -->
         <dependency>
             <groupId>org.apache.shardingsphere</groupId>
