--- a/shardingsphere-features/shardingsphere-shadow/shardingsphere-shadow-distsql/shardingsphere-shadow-distsql-handler/pom.xml
+++ b/shardingsphere-features/shardingsphere-shadow/shardingsphere-shadow-distsql/shardingsphere-shadow-distsql-handler/pom.xml
@@ -38,5 +38,10 @@
             <artifactId>shardingsphere-shadow-distsql-statement</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.shardingsphere</groupId>
+            <artifactId>shardingsphere-shadow-distsql-parser</artifactId>
+            <version>${project.version}</version>
+        </dependency>
     </dependencies>
 </project>
