Remove databaseType input param from SingleTableRule's constructor (#18345)
* Refactor SingleTableRuleBuilderTest

* Remove databaseType input param from SingleTableRule's constructor

* Fix test case

--- a/shardingsphere-kernel/shardingsphere-single-table/shardingsphere-single-table-core/pom.xml
+++ b/shardingsphere-kernel/shardingsphere-single-table/shardingsphere-single-table-core/pom.xml
@@ -39,5 +39,12 @@
             <artifactId>shardingsphere-infra-route</artifactId>
             <version>${project.version}</version>
         </dependency>
+        
+        <dependency>
+            <groupId>org.apache.shardingsphere</groupId>
+            <artifactId>shardingsphere-test-common</artifactId>
+            <version>${project.version}</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 </project>
