--- a/.codecov.yml
+++ b/.codecov.yml
@@ -15,11 +15,6 @@
 # limitations under the License.
 #
 
-coverage:
-  status:
-    # pull-requests only
-    patch:
-      default:
-        threshold: 0.1%
-ignore:
-  - "examples/.*"
+org.apache.shardingsphere.readwritesplitting.algorithm.RoundRobinReplicaLoadBalanceAlgorithm
+org.apache.shardingsphere.readwritesplitting.algorithm.RandomReplicaLoadBalanceAlgorithm
+org.apache.shardingsphere.readwritesplitting.algorithm.WeightReplicaLoadBalanceAlgorithm
