--- a/shardingsphere-charts/apache-shardingsphere-proxy/values.yaml
+++ b/shardingsphere-charts/apache-shardingsphere-proxy/values.yaml
@@ -108,34 +108,51 @@ compute:
   ## ref: https://shardingsphere.apache.org/document/current/en/user-manual/shardingsphere-proxy/startup/docker/
   ##
   startPort: 3307
-  ## @param compute.serverConfig ServerConfiguration file for ShardingSphere-Proxy
+  ## @section Compute-Node ShardingSphere-Proxy ServerConfiguration parameters
   ## NOTE: If you use the sub-charts to deploy Zookeeper, the server-lists field must be "{{ printf \"%s-zookeeper.%s:2181\" .Release.Name .Release.Namespace }}",
   ## otherwise please fill in the correct zookeeper address
   ## The server.yaml is auto-generated based on this parameter.
   ## If it is empty, the server.yaml is also empty.
   ## ref: https://shardingsphere.apache.org/document/current/en/user-manual/shardingsphere-jdbc/yaml-config/mode/
-  ## ref: https://shardingsphere.apache.org/document/current/cn/user-manual/shardingsphere-jdbc/builtin-algorithm/metadata-repository/
-  ## e.g:
-  ## serverConfig:
-  ##   authority:
-  ##    privilege:
-  ##      type: ALL_PRIVILEGES_PERMITTED
-  ##    users:
-  ##    - password: root
-  ##      user: root@%
-  ##   mode:
-  ##    overwrite: true
-  ##    repository:
-  ##      props:
-  ##        maxRetries: 3
-  ##        namespace: governance_ds
-  ##        operationTimeoutMilliseconds: 5000
-  ##        retryIntervalMilliseconds: 500
-  ##        server-lists: "{{ printf \"%s-zookeeper.%s:2181\" .Release.Name .Release.Namespace }}"
-  ##        timeToLiveSeconds: 600
-  ##      type: ZooKeeper
-  ##    type: Cluster
+  ## ref: https://shardingsphere.apache.org/document/current/en/user-manual/shardingsphere-jdbc/builtin-algorithm/metadata-repository/
   ##
-  serverConfig: ""
+  serverConfig:
+    ## @section Compute-Node ShardingSphere-Proxy ServerConfiguration authority parameters
+    ## NOTE: It is used to set up initial user to login compute node, and authority data of storage node.
+    ## ref: https://shardingsphere.apache.org/document/current/en/user-manual/shardingsphere-proxy/yaml-config/authentication/
+    ## @param compute.serverConfig.authority.privilege.type authority provider for storage node, the default value is ALL_PERMITTED
+    ## @param compute.serverConfig.authority.users[0].password Password for compute node.
+    ## @param compute.serverConfig.authority.users[0].user Username,authorized host for compute node. Format: <username>@<hostname> hostname is % or empty string means do not care about authorized host
+    ##
+    authority:
+      privilege:
+        type: ALL_PRIVILEGES_PERMITTED
+      users:
+      - password: root
+        user: root@%
+    ## @section Compute-Node ShardingSphere-Proxy ServerConfiguration mode Configuration parameters
+    ## @param compute.serverConfig.mode.type Type of mode configuration. Now only support Cluster mode
+    ## @param compute.serverConfig.mode.repository.props.namespace Namespace of registry center
+    ## @param compute.serverConfig.mode.repository.props.server-lists Server lists of registry center
+    ## @param compute.serverConfig.mode.repository.props.maxRetries Max retries of client connection
+    ## @param compute.serverConfig.mode.repository.props.operationTimeoutMilliseconds Milliseconds of operation timeout
+    ## @param compute.serverConfig.mode.repository.props.retryIntervalMilliseconds Milliseconds of retry interval
+    ## @param compute.serverConfig.mode.repository.props.timeToLiveSeconds Seconds of ephemeral data live
+    ## @param compute.serverConfig.mode.repository.type Type of persist repository. Now only support ZooKeeper
+    ## @param compute.serverConfig.mode.overwrite Whether overwrite persistent configuration with local configuration
+    ##
+    mode:
+      type: Cluster
+      repository:
+        type: ZooKeeper
+        props:
+          maxRetries: 3
+          namespace: governance_ds
+          operationTimeoutMilliseconds: 5000
+          retryIntervalMilliseconds: 500
+          server-lists: "{{ printf \"%s-zookeeper.%s:2181\" .Release.Name .Release.Namespace }}"
+          timeToLiveSeconds: 60
+      overwrite: true
+
 
 
