Upgrade scaling native mode, support auto init and cleanup. (#18709)

--- a/shardingsphere-test/shardingsphere-integration-test/shardingsphere-integration-test-scaling/src/test/resources/env/opengauss/server.yaml
+++ b/shardingsphere-test/shardingsphere-integration-test/shardingsphere-integration-test-scaling/src/test/resources/env/opengauss/server.yaml
@@ -20,7 +20,7 @@ mode:
   repository:
     type: ZooKeeper
     props:
-      namespace: opengauss_db
+      namespace: it_db_opengauss
       server-lists: zk.host:2181
       retryIntervalMilliseconds: 500
       timeToLiveSeconds: 60
