Add check logic for ShardingAlgorithm and KeyGenerator name not exists (#18834)
* Add check logic for ShardingAlgorithm and KeyGenerator name not exists

* fix integration test

* correct some wrong sharding config

--- a/shardingsphere-test/shardingsphere-pipeline-test/src/test/resources/config_sharding_sphere_jdbc_source.yaml
+++ b/shardingsphere-test/shardingsphere-pipeline-test/src/test/resources/config_sharding_sphere_jdbc_source.yaml
@@ -49,6 +49,9 @@ rules:
       type: INLINE
       props:
         algorithm-expression: t_order
+  keyGenerators:
+    snowflake:
+      type: SNOWFLAKE
   scalingName: default_scaling
   scaling:
     default_scaling:
