--- a/shardingsphere-proxy/shardingsphere-proxy-bootstrap/src/main/resources/conf/config-sharding.yaml
+++ b/shardingsphere-proxy/shardingsphere-proxy-bootstrap/src/main/resources/conf/config-sharding.yaml
@@ -74,7 +74,7 @@
 #  defaultTableStrategy:
 #    none:
 #  auditStrategy:
-#    auditAlgorithmNames:
+#    auditorNames:
 #      - sharding_key_required_audit_algorithm
 #    allowHintDisable: true
 #
@@ -96,7 +96,7 @@
 #    snowflake:
 #      type: SNOWFLAKE
 #
-#  auditAlgorithms:
+#  auditors:
 #    sharding_key_required_audit_algorithm:
 #      type: DML_SHARDING_CONDITIONS
 #
@@ -121,14 +121,6 @@
 #        type: DATA_MATCH
 #        props:
 #          chunk-size: 1000
-#
-#  auditAlgorithms:
-#    sharding_key_required_audit_algorithm:
-#      type: DML_SHARDING_CONDITIONS
-#  auditStrategy:
-#    auditAlgorithmNames:
-#      - sharding_key_required_audit_algorithm
-#    allowHintDisable: true
 
 ######################################################################################################
 #
@@ -188,7 +180,7 @@
 #  defaultTableStrategy:
 #    none:
 #  auditStrategy:
-#    auditAlgorithmNames:
+#    auditorNames:
 #      - sharding_key_required_audit_algorithm
 #    allowHintDisable: true
 #
@@ -210,7 +202,7 @@
 #    snowflake:
 #      type: SNOWFLAKE
 #
-#  auditAlgorithms:
+#  auditors:
 #    sharding_key_required_audit_algorithm:
 #      type: DML_SHARDING_CONDITIONS
 #
