--- a/shardingsphere-proxy/shardingsphere-proxy-bootstrap/src/main/resources/conf/config-sharding.yaml
+++ b/shardingsphere-proxy/shardingsphere-proxy-bootstrap/src/main/resources/conf/config-sharding.yaml
@@ -54,8 +54,12 @@
 #          shardingColumn: order_id
 #          shardingAlgorithmName: t_order_inline
 #      keyGenerateStrategy:
-#          column: order_id
-#          keyGeneratorName: snowflake
+#        column: order_id
+#        keyGeneratorName: snowflake
+#      auditStrategy:
+#        auditorNames:
+#          - sharding_key_required_auditor
+#        allowHintDisable: true
 #    t_order_item:
 #      actualDataNodes: ds_${0..1}.t_order_item_${0..1}
 #      tableStrategy:
@@ -73,7 +77,7 @@
 #      shardingAlgorithmName: database_inline
 #  defaultTableStrategy:
 #    none:
-#  auditStrategy:
+#  defaultAuditStrategy:
 #    auditorNames:
 #      - sharding_key_required_auditor
 #    allowHintDisable: true
@@ -162,6 +166,10 @@
 #      keyGenerateStrategy:
 #        column: order_id
 #        keyGeneratorName: snowflake
+#      auditStrategy:
+#        auditorNames:
+#          - sharding_key_required_auditor
+#        allowHintDisable: true
 #    t_order_item:
 #      actualDataNodes: ds_${0..1}.t_order_item_${0..1}
 #      tableStrategy:
@@ -179,7 +187,7 @@
 #      shardingAlgorithmName: database_inline
 #  defaultTableStrategy:
 #    none:
-#  auditStrategy:
+#  defaultAuditStrategy:
 #    auditorNames:
 #      - sharding_key_required_auditor
 #    allowHintDisable: true
