Improve scaling IT (#19032)
* Split sharding rule

* Random set null

* Fix ci error

* Add weak sql_mode, use some irregular data

--- a/shardingsphere-test/shardingsphere-integration-test/shardingsphere-integration-test-scaling/src/test/resources/env/postgresql/postgresql.conf
+++ b/shardingsphere-test/shardingsphere-integration-test/shardingsphere-integration-test-scaling/src/test/resources/env/postgresql/postgresql.conf
@@ -15,6 +15,7 @@
 # limitations under the License.
 #
 
+listen_addresses = '*'
 wal_level = logical
 max_replication_slots = 10
 log_timezone = 'Asia/Shanghai'
