--- a/examples/shardingsphere-example-generator/src/main/resources/config.yaml
+++ b/examples/shardingsphere-example-generator/src/main/resources/config.yaml
@@ -19,9 +19,9 @@
 products:
   - jdbc
 
-# supported: memory,cluster-zookeeper,cluster-etcd,standalone-file
+# supported: cluster-zookeeper,cluster-etcd,standalone-file
 modes: 
-  - memory
+  - standalone-file
 
 # supported: local, xa-atomikos, xa-narayana, base-seata
 transactions: 
