--- a/examples/shardingsphere-jdbc-example/single-feature-example/encrypt-example/encrypt-spring-boot-jpa-example/pom.xml
+++ b/examples/shardingsphere-jdbc-example/single-feature-example/encrypt-example/encrypt-spring-boot-jpa-example/pom.xml
@@ -22,19 +22,29 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>org.apache.shardingsphere.example</groupId>
-        <artifactId>single-feature-example</artifactId>
+        <artifactId>encrypt-example</artifactId>
         <version>${revision}</version>
     </parent>
-    <artifactId>encrypt-example</artifactId>
+    <artifactId>encrypt-spring-boot-jpa-example</artifactId>
     <name>${project.artifactId}</name>
-    
-    <packaging>pom</packaging>
-    
-    <modules>
-        <module>encrypt-raw-jdbc-example</module>
-        <module>encrypt-spring-boot-mybatis-example</module>
-        <module>encrypt-spring-boot-jpa-example</module>
-        <module>encrypt-spring-namespace-mybatis-example</module>
-        <module>encrypt-spring-namespace-jpa-example</module>
-    </modules>
+
+    <dependencies>
+        <dependency>
+            <groupId>org.apache.shardingsphere.example</groupId>
+            <artifactId>example-spring-jpa</artifactId>
+            <version>${project.parent.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.shardingsphere</groupId>
+            <artifactId>shardingsphere-jdbc-core-spring-boot-starter</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-jpa</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+        </dependency>
+    </dependencies>
 </project>
