--- a/shardingsphere-test/shardingsphere-integration-test/shardingsphere-integration-test-scaling/src/test/resources/env/it-env.properties
+++ b/shardingsphere-test/shardingsphere-integration-test/shardingsphere-integration-test-scaling/src/test/resources/env/it-env.properties
@@ -14,15 +14,15 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 #
-# it.type=DOCKER,NATIVE
+# scaling.it.type=DOCKER,NATIVE
 scaling.it.env.type=
-# it.docker.mysql.version=mysql:5.7,mysql:8.0
+# scaling.it.docker.mysql.version=mysql:5.7,mysql:8.0
 scaling.it.docker.mysql.version=
-# it.docker.postgresql.version=postgres:10-alpine,postgres:11-alpine,postgres:12-alpine,postgres:13-alpine,postgres:14-alpine
+# scaling.it.docker.postgresql.version=postgres:10-alpine,postgres:11-alpine,postgres:12-alpine,postgres:13-alpine,postgres:14-alpine
 scaling.it.docker.postgresql.version=
-# it.docker.opengauss.version=enmotech/opengauss:3.0.0,enmotech/opengauss:2.1.0
+# scaling.it.docker.opengauss.version=enmotech/opengauss:3.0.0,enmotech/opengauss:2.1.0
 scaling.it.docker.opengauss.version=
-# it.native.database=mysql or postgresql or opengauss
+# scaling.it.native.database=mysql or postgresql or opengauss
 scaling.it.native.database=
 scaling.it.native.mysql.username=root
 scaling.it.native.mysql.password=root
