Close readwrite it of cluster (#19341)

--- a/.github/workflows/it.yml
+++ b/.github/workflows/it.yml
@@ -184,6 +184,9 @@ jobs:
           - adapter: proxy
             database: PostgreSQL
             scenario: readwrite_splitting
+          - adapter: proxy
+            database: MySQL
+            scenario: readwrite_splitting
     steps:
       - uses: actions/checkout@v2
       - name: Cache Maven Repos
