Add MockedDatabaseType into shardingsphere-test-fixture module (#19357)
* Add common FixtureDatabaseType

* Reuse FixtureDatabaseType

* Reuse FixtureDatabaseType

* Reuse FixtureDatabaseType

* Rename MockedDatabaseType

* Rename InfraDatabaseTypeFixture

* Refactor InfraDatabaseTypeFixture

* Remove DDLGeneratorDatabaseTypeFixture

--- a/shardingsphere-infra/shardingsphere-infra-executor/pom.xml
+++ b/shardingsphere-infra/shardingsphere-infra-executor/pom.xml
@@ -40,6 +40,13 @@
         </dependency>
         
         <dependency>
+            <groupId>org.apache.shardingsphere</groupId>
+            <artifactId>shardingsphere-test-fixture</artifactId>
+            <version>${project.version}</version>
+            <scope>test</scope>
+        </dependency>
+        
+        <dependency>
             <groupId>io.vertx</groupId>
             <artifactId>vertx-mysql-client</artifactId>
         </dependency>
