--- a/shardingsphere-test/shardingsphere-test-fixture/pom.xml
+++ b/shardingsphere-test/shardingsphere-test-fixture/pom.xml
@@ -37,5 +37,11 @@
             <artifactId>shardingsphere-infra-common</artifactId>
             <version>${project.version}</version>
         </dependency>
+        
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 </project>
