Add configuration prompt (#19367)

--- a/shardingsphere-jdbc/shardingsphere-jdbc-spring/shardingsphere-jdbc-core-spring/shardingsphere-jdbc-core-spring-boot-starter/src/main/resources/META-INF/additional-spring-configuration-metadata.json
+++ b/shardingsphere-jdbc/shardingsphere-jdbc-spring/shardingsphere-jdbc-core-spring/shardingsphere-jdbc-core-spring-boot-starter/src/main/resources/META-INF/additional-spring-configuration-metadata.json
@@ -75,6 +75,10 @@
     {
       "name": "spring.shardingsphere.schema.name",
       "type": "org.apache.shardingsphere.spring.boot.ShardingSphereAutoConfiguration"
+    },
+    {
+      "name": "spring.shardingsphere.rules.sql-translator",
+      "type": "org.apache.shardingsphere.sqltranslator.api.config.SQLTranslatorRuleConfiguration"
     }
   ],
   "hints": [
