--- a/shardingsphere-test/shardingsphere-integration-test/pom.xml
+++ b/shardingsphere-test/shardingsphere-integration-test/pom.xml
@@ -33,6 +33,7 @@
         <module>shardingsphere-integration-test-env</module>
         <module>shardingsphere-integration-test-suite</module>
         <module>shardingsphere-integration-test-scaling</module>
+        <module>shardingsphere-integration-test-transaction</module>
     </modules>
     
     <properties>
