Move env and container to env module (#19488)
* Refactor DockerStorageContainer

* Refactor DockerStorageContainer impl

* Move env

* Move container

--- a/shardingsphere-test/shardingsphere-integration-test/shardingsphere-integration-test-env/pom.xml
+++ b/shardingsphere-test/shardingsphere-integration-test/shardingsphere-integration-test-env/pom.xml
@@ -34,8 +34,9 @@
     <dependencies>
         <dependency>
             <groupId>org.apache.shardingsphere</groupId>
-            <artifactId>shardingsphere-infra-common</artifactId>
+            <artifactId>shardingsphere-integration-test-fixture</artifactId>
             <version>${project.version}</version>
+            <type>test-jar</type>
         </dependency>
         
         <dependency>
