Use unified password to access databases (#19501)
* Use unified password to access databases

* Use unified password to access databases

* Use unified password to access databases

* Use unified password to access databases

* Use unified password to access databases

* Use unified password to access databases

* Use unified password to access databases

* Use unified password to access databases

* Use unified password to access databases

* Use unified password to access databases

--- a/shardingsphere-test/shardingsphere-integration-test/shardingsphere-integration-test-scaling/src/test/resources/env/it-env.properties
+++ b/shardingsphere-test/shardingsphere-integration-test/shardingsphere-integration-test-scaling/src/test/resources/env/it-env.properties
@@ -25,10 +25,10 @@ scaling.it.docker.opengauss.version=
 # scaling.it.native.database=mysql or postgresql or opengauss
 scaling.it.native.database=
 scaling.it.native.mysql.username=root
-scaling.it.native.mysql.password=root
+scaling.it.native.mysql.password=Root@123
 scaling.it.native.mysql.port=3306
 scaling.it.native.postgresql.username=postgres
-scaling.it.native.postgresql.password=root
+scaling.it.native.postgresql.password=Root@123
 scaling.it.native.postgresql.port=5432
 scaling.it.native.opengauss.username=gaussdb
 scaling.it.native.opengauss.password=Root@123
