--- a/shardingsphere-test/shardingsphere-integration-test/shardingsphere-integration-test-suite/src/test/resources/env/scenario/db/proxy/conf/postgresql/config-db.yaml
+++ b/shardingsphere-test/shardingsphere-integration-test/shardingsphere-integration-test-suite/src/test/resources/env/scenario/db/proxy/conf/postgresql/config-db.yaml
@@ -21,7 +21,7 @@ dataSources:
   ds_0:
     url: jdbc:postgresql://postgresql.db.host:5432/db_0
     username: root
-    password: root
+    password: Root@123
     connectionTimeoutMilliseconds: 30000
     idleTimeoutMilliseconds: 60000
     maxLifetimeMilliseconds: 1800000
@@ -30,7 +30,7 @@ dataSources:
   ds_1:
     url: jdbc:postgresql://postgresql.db.host:5432/db_1
     username: root
-    password: root
+    password: Root@123
     connectionTimeoutMilliseconds: 30000
     idleTimeoutMilliseconds: 60000
     maxLifetimeMilliseconds: 1800000
@@ -39,7 +39,7 @@ dataSources:
   ds_2:
     url: jdbc:postgresql://postgresql.db.host:5432/db_2
     username: root
-    password: root
+    password: Root@123
     connectionTimeoutMilliseconds: 30000
     idleTimeoutMilliseconds: 60000
     maxLifetimeMilliseconds: 1800000
@@ -48,7 +48,7 @@ dataSources:
   ds_3:
     url: jdbc:postgresql://postgresql.db.host:5432/db_3
     username: root
-    password: root
+    password: Root@123
     connectionTimeoutMilliseconds: 30000
     idleTimeoutMilliseconds: 60000
     maxLifetimeMilliseconds: 1800000
@@ -57,7 +57,7 @@ dataSources:
   ds_4:
     url: jdbc:postgresql://postgresql.db.host:5432/db_4
     username: root
-    password: root
+    password: Root@123
     connectionTimeoutMilliseconds: 30000
     idleTimeoutMilliseconds: 60000
     maxLifetimeMilliseconds: 1800000
@@ -66,7 +66,7 @@ dataSources:
   ds_5:
     url: jdbc:postgresql://postgresql.db.host:5432/db_5
     username: root
-    password: root
+    password: Root@123
     connectionTimeoutMilliseconds: 30000
     idleTimeoutMilliseconds: 60000
     maxLifetimeMilliseconds: 1800000
@@ -75,7 +75,7 @@ dataSources:
   ds_6:
     url: jdbc:postgresql://postgresql.db.host:5432/db_6
     username: root
-    password: root
+    password: Root@123
     connectionTimeoutMilliseconds: 30000
     idleTimeoutMilliseconds: 60000
     maxLifetimeMilliseconds: 1800000
@@ -84,7 +84,7 @@ dataSources:
   ds_7:
     url: jdbc:postgresql://postgresql.db.host:5432/db_7
     username: root
-    password: root
+    password: Root@123
     connectionTimeoutMilliseconds: 30000
     idleTimeoutMilliseconds: 60000
     maxLifetimeMilliseconds: 1800000
@@ -93,7 +93,7 @@ dataSources:
   ds_8:
     url: jdbc:postgresql://postgresql.db.host:5432/db_8
     username: root
-    password: root
+    password: Root@123
     connectionTimeoutMilliseconds: 30000
     idleTimeoutMilliseconds: 60000
     maxLifetimeMilliseconds: 1800000
@@ -102,7 +102,7 @@ dataSources:
   ds_9:
     url: jdbc:postgresql://postgresql.db.host:5432/db_9
     username: root
-    password: root
+    password: Root@123
     connectionTimeoutMilliseconds: 30000
     idleTimeoutMilliseconds: 60000
     maxLifetimeMilliseconds: 1800000
