--- a/shardingsphere-test/shardingsphere-integration-test/shardingsphere-integration-test-suite/src/test/resources/env/scenario/dbtbl_with_readwrite_splitting_and_encrypt/proxy/conf/postgresql/config-dbtbl-with-readwrite-splitting-and-encrypt.yaml
+++ b/shardingsphere-test/shardingsphere-integration-test/shardingsphere-integration-test-suite/src/test/resources/env/scenario/dbtbl_with_readwrite_splitting_and_encrypt/proxy/conf/postgresql/config-dbtbl-with-readwrite-splitting-and-encrypt.yaml
@@ -21,7 +21,7 @@ dataSources:
   encrypt_write_ds_0:
     url: jdbc:postgresql://postgresql.dbtbl_with_readwrite_splitting_and_encrypt.host:5432/encrypt_write_ds_0
     username: root
-    password: root
+    password: Root@123
     connectionTimeoutMilliseconds: 30000
     idleTimeoutMilliseconds: 60000
     maxLifetimeMilliseconds: 1800000
@@ -30,7 +30,7 @@ dataSources:
   encrypt_write_ds_1:
     url: jdbc:postgresql://postgresql.dbtbl_with_readwrite_splitting_and_encrypt.host:5432/encrypt_write_ds_1
     username: root
-    password: root
+    password: Root@123
     connectionTimeoutMilliseconds: 30000
     idleTimeoutMilliseconds: 60000
     maxLifetimeMilliseconds: 1800000
@@ -39,7 +39,7 @@ dataSources:
   encrypt_write_ds_2:
     url: jdbc:postgresql://postgresql.dbtbl_with_readwrite_splitting_and_encrypt.host:5432/encrypt_write_ds_2
     username: root
-    password: root
+    password: Root@123
     connectionTimeoutMilliseconds: 30000
     idleTimeoutMilliseconds: 60000
     maxLifetimeMilliseconds: 1800000
@@ -48,7 +48,7 @@ dataSources:
   encrypt_write_ds_3:
     url: jdbc:postgresql://postgresql.dbtbl_with_readwrite_splitting_and_encrypt.host:5432/encrypt_write_ds_3
     username: root
-    password: root
+    password: Root@123
     connectionTimeoutMilliseconds: 30000
     idleTimeoutMilliseconds: 60000
     maxLifetimeMilliseconds: 1800000
@@ -57,7 +57,7 @@ dataSources:
   encrypt_write_ds_4:
     url: jdbc:postgresql://postgresql.dbtbl_with_readwrite_splitting_and_encrypt.host:5432/encrypt_write_ds_4
     username: root
-    password: root
+    password: Root@123
     connectionTimeoutMilliseconds: 30000
     idleTimeoutMilliseconds: 60000
     maxLifetimeMilliseconds: 1800000
@@ -66,7 +66,7 @@ dataSources:
   encrypt_write_ds_5:
     url: jdbc:postgresql://postgresql.dbtbl_with_readwrite_splitting_and_encrypt.host:5432/encrypt_write_ds_5
     username: root
-    password: root
+    password: Root@123
     connectionTimeoutMilliseconds: 30000
     idleTimeoutMilliseconds: 60000
     maxLifetimeMilliseconds: 1800000
@@ -75,7 +75,7 @@ dataSources:
   encrypt_write_ds_6:
     url: jdbc:postgresql://postgresql.dbtbl_with_readwrite_splitting_and_encrypt.host:5432/encrypt_write_ds_6
     username: root
-    password: root
+    password: Root@123
     connectionTimeoutMilliseconds: 30000
     idleTimeoutMilliseconds: 60000
     maxLifetimeMilliseconds: 1800000
@@ -84,7 +84,7 @@ dataSources:
   encrypt_write_ds_7:
     url: jdbc:postgresql://postgresql.dbtbl_with_readwrite_splitting_and_encrypt.host:5432/encrypt_write_ds_7
     username: root
-    password: root
+    password: Root@123
     connectionTimeoutMilliseconds: 30000
     idleTimeoutMilliseconds: 60000
     maxLifetimeMilliseconds: 1800000
@@ -93,7 +93,7 @@ dataSources:
   encrypt_write_ds_8:
     url: jdbc:postgresql://postgresql.dbtbl_with_readwrite_splitting_and_encrypt.host:5432/encrypt_write_ds_8
     username: root
-    password: root
+    password: Root@123
     connectionTimeoutMilliseconds: 30000
     idleTimeoutMilliseconds: 60000
     maxLifetimeMilliseconds: 1800000
@@ -102,7 +102,7 @@ dataSources:
   encrypt_write_ds_9:
     url: jdbc:postgresql://postgresql.dbtbl_with_readwrite_splitting_and_encrypt.host:5432/encrypt_write_ds_9
     username: root
-    password: root
+    password: Root@123
     connectionTimeoutMilliseconds: 30000
     idleTimeoutMilliseconds: 60000
     maxLifetimeMilliseconds: 1800000
@@ -111,7 +111,7 @@ dataSources:
   encrypt_read_ds_0:
     url: jdbc:postgresql://postgresql.dbtbl_with_readwrite_splitting_and_encrypt.host:5432/encrypt_read_ds_0
     username: root
-    password: root
+    password: Root@123
     connectionTimeoutMilliseconds: 30000
     idleTimeoutMilliseconds: 60000
     maxLifetimeMilliseconds: 1800000
@@ -120,7 +120,7 @@ dataSources:
   encrypt_read_ds_1:
     url: jdbc:postgresql://postgresql.dbtbl_with_readwrite_splitting_and_encrypt.host:5432/encrypt_read_ds_1
     username: root
-    password: root
+    password: Root@123
     connectionTimeoutMilliseconds: 30000
     idleTimeoutMilliseconds: 60000
     maxLifetimeMilliseconds: 1800000
@@ -129,7 +129,7 @@ dataSources:
   encrypt_read_ds_2:
     url: jdbc:postgresql://postgresql.dbtbl_with_readwrite_splitting_and_encrypt.host:5432/encrypt_read_ds_2
     username: root
-    password: root
+    password: Root@123
     connectionTimeoutMilliseconds: 30000
     idleTimeoutMilliseconds: 60000
     maxLifetimeMilliseconds: 1800000
@@ -138,7 +138,7 @@ dataSources:
   encrypt_read_ds_3:
     url: jdbc:postgresql://postgresql.dbtbl_with_readwrite_splitting_and_encrypt.host:5432/encrypt_read_ds_3
     username: root
-    password: root
+    password: Root@123
     connectionTimeoutMilliseconds: 30000
     idleTimeoutMilliseconds: 60000
     maxLifetimeMilliseconds: 1800000
@@ -147,7 +147,7 @@ dataSources:
   encrypt_read_ds_4:
     url: jdbc:postgresql://postgresql.dbtbl_with_readwrite_splitting_and_encrypt.host:5432/encrypt_read_ds_4
     username: root
-    password: root
+    password: Root@123
     connectionTimeoutMilliseconds: 30000
     idleTimeoutMilliseconds: 60000
     maxLifetimeMilliseconds: 1800000
@@ -156,7 +156,7 @@ dataSources:
   encrypt_read_ds_5:
     url: jdbc:postgresql://postgresql.dbtbl_with_readwrite_splitting_and_encrypt.host:5432/encrypt_read_ds_5
     username: root
-    password: root
+    password: Root@123
     connectionTimeoutMilliseconds: 30000
     idleTimeoutMilliseconds: 60000
     maxLifetimeMilliseconds: 1800000
@@ -165,7 +165,7 @@ dataSources:
   encrypt_read_ds_6:
     url: jdbc:postgresql://postgresql.dbtbl_with_readwrite_splitting_and_encrypt.host:5432/encrypt_read_ds_6
     username: root
-    password: root
+    password: Root@123
     connectionTimeoutMilliseconds: 30000
     idleTimeoutMilliseconds: 60000
     maxLifetimeMilliseconds: 1800000
@@ -174,7 +174,7 @@ dataSources:
   encrypt_read_ds_7:
     url: jdbc:postgresql://postgresql.dbtbl_with_readwrite_splitting_and_encrypt.host:5432/encrypt_read_ds_7
     username: root
-    password: root
+    password: Root@123
     connectionTimeoutMilliseconds: 30000
     idleTimeoutMilliseconds: 60000
     maxLifetimeMilliseconds: 1800000
@@ -183,7 +183,7 @@ dataSources:
   encrypt_read_ds_8:
     url: jdbc:postgresql://postgresql.dbtbl_with_readwrite_splitting_and_encrypt.host:5432/encrypt_read_ds_8
     username: root
-    password: root
+    password: Root@123
     connectionTimeoutMilliseconds: 30000
     idleTimeoutMilliseconds: 60000
     maxLifetimeMilliseconds: 1800000
@@ -192,7 +192,7 @@ dataSources:
   encrypt_read_ds_9:
     url: jdbc:postgresql://postgresql.dbtbl_with_readwrite_splitting_and_encrypt.host:5432/encrypt_read_ds_9
     username: root
-    password: root
+    password: Root@123
     connectionTimeoutMilliseconds: 30000
     idleTimeoutMilliseconds: 60000
     maxLifetimeMilliseconds: 1800000
