--- a/shardingsphere-test/shardingsphere-integration-test/shardingsphere-integration-test-suite/src/test/resources/env/scenario/shadow/proxy/conf/mysql/config-shadow.yaml
+++ b/shardingsphere-test/shardingsphere-integration-test/shardingsphere-integration-test-suite/src/test/resources/env/scenario/shadow/proxy/conf/mysql/config-shadow.yaml
@@ -21,7 +21,7 @@ dataSources:
   db:
     url: jdbc:mysql://mysql.shadow.host:3306/db?serverTimezone=UTC&useSSL=false&characterEncoding=utf-8
     username: root
-    password: root
+    password: Root@123
     connectionTimeoutMilliseconds: 30000
     idleTimeoutMilliseconds: 60000
     maxLifetimeMilliseconds: 1800000
@@ -30,7 +30,7 @@ dataSources:
   shadow_db:
     url: jdbc:mysql://mysql.shadow.host:3306/shadow_db?serverTimezone=UTC&useSSL=false&characterEncoding=utf-8
     username: root
-    password: root
+    password: Root@123
     connectionTimeoutMilliseconds: 30000
     idleTimeoutMilliseconds: 60000
     maxLifetimeMilliseconds: 1800000
