--- a/shardingsphere-test/shardingsphere-integration-test/shardingsphere-integration-test-suite/src/test/resources/env/scenario/shadow/proxy/conf/postgresql/config-shadow.yaml
+++ b/shardingsphere-test/shardingsphere-integration-test/shardingsphere-integration-test-suite/src/test/resources/env/scenario/shadow/proxy/conf/postgresql/config-shadow.yaml
@@ -21,7 +21,7 @@ dataSources:
   db:
     url: jdbc:postgresql://postgresql.shadow.host:5432/db
     username: root
-    password: root
+    password: Root@123
     connectionTimeoutMilliseconds: 30000
     idleTimeoutMilliseconds: 60000
     maxLifetimeMilliseconds: 1800000
@@ -30,7 +30,7 @@ dataSources:
   shadow_db:
     url: jdbc:postgresql://postgresql.shadow.host:5432/shadow_db
     username: root
-    password: root
+    password: Root@123
     connectionTimeoutMilliseconds: 30000
     idleTimeoutMilliseconds: 60000
     maxLifetimeMilliseconds: 1800000
