Scaling IT adapt mysql 5 and 8 (#19661)
* Scaling IT adapt mysql 5 and 8

* it-transaction.yml exclude scaling

--- a/.github/workflows/it-transaction.yml
+++ b/.github/workflows/it-transaction.yml
@@ -28,6 +28,7 @@ on:
       - '!shardingsphere-test/**'
       - 'shardingsphere-test/shardingsphere-integration-test/**'
       - '!shardingsphere-test/shardingsphere-integration-test/shardingsphere-integration-test-suite/**'
+      - '!shardingsphere-test/shardingsphere-integration-test/shardingsphere-integration-test-scaling/**'
       - '!*.md'
 
 concurrency:
