Refactor container user (#19643)
* Refactor : update the default user for storage conainer(#19613)

* Refactor : replace all mysql root user with test_user #(19613)

* Refactor : replace all PG postgres user with test_user #(19613)

* Refactor : remove useRootUsername #(19613)

* Refactor : refactor parameter variable #(19613)

* Refactor : remove the corrupt parameter #(19613)

* Fix : fix the param issue during merge conflict

* Refactor : grant test user the corresponding role for test

* Refactor : refactor the action step name

* Merge Master branch

--- a/.github/workflows/it.yml
+++ b/.github/workflows/it.yml
@@ -272,7 +272,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - name: Maven resolve ranges
+      - name: Maven Resolve Ranges
         run: ./mvnw versions:resolve-ranges -ntp -Dincludes='org.springframework:*,org.springframework.boot:*'
       - name: Cache Maven Repos
         uses: actions/cache@v2
