--- a/shardingsphere-test/shardingsphere-integration-test/shardingsphere-integration-test-suite/src/test/resources/env/scenario/readwrite_splitting/proxy/conf/postgresql/config-readwrite-splitting.yaml
+++ b/shardingsphere-test/shardingsphere-integration-test/shardingsphere-integration-test-suite/src/test/resources/env/scenario/readwrite_splitting/proxy/conf/postgresql/config-readwrite-splitting.yaml
@@ -20,8 +20,8 @@ databaseName: readwrite_splitting
 dataSources:
   write_ds:
     url: jdbc:postgresql://postgresql.readwrite_splitting.host:5432/write_ds
-    username: root
-    password: Root@123
+    username: test_user
+    password: Test@123
     connectionTimeoutMilliseconds: 30000
     idleTimeoutMilliseconds: 60000
     maxLifetimeMilliseconds: 1800000
@@ -29,8 +29,8 @@ dataSources:
     minPoolSize: 2
   read_0:
     url: jdbc:postgresql://postgresql.readwrite_splitting.host:5432/read_0
-    username: root
-    password: Root@123
+    username: test_user
+    password: Test@123
     connectionTimeoutMilliseconds: 30000
     idleTimeoutMilliseconds: 60000
     maxLifetimeMilliseconds: 1800000
@@ -38,8 +38,8 @@ dataSources:
     minPoolSize: 2
   read_1:
     url: jdbc:postgresql://postgresql.readwrite_splitting.host:5432/read_1
-    username: root
-    password: Root@123
+    username: test_user
+    password: Test@123
     connectionTimeoutMilliseconds: 30000
     idleTimeoutMilliseconds: 60000
     maxLifetimeMilliseconds: 1800000
