Refactor : refactor the transaction it filter (#19683)

--- a/.github/workflows/it-transaction.yml
+++ b/.github/workflows/it-transaction.yml
@@ -20,6 +20,9 @@ name: Transaction Integration Test
 on:
   push:
     branches: [ master, dev ]
+      - '**/pom.xml'
+      - 'shardingsphere-distribution/shardingsphere-proxy-distribution/**'
+      - '!*.md'
 
   pull_request:
     branches: [ master ]
