Refactor : refactor the transaction it filter, drop the other rule (#19685)
* Refactor : refactor the transaction it filter, drop the other rule

* Refactor : refactor the transaction it filter, drop the other rule

* test

* revert the modification

* revert the modification

* add default type for transaction it env

* revert the modification

--- a/.github/workflows/it-transaction.yml
+++ b/.github/workflows/it-transaction.yml
@@ -20,10 +20,8 @@ name: Transaction Integration Test
 on:
   push:
     branches: [ master, dev ]
-      - '**/pom.xml'
-      - 'shardingsphere-distribution/shardingsphere-proxy-distribution/**'
+    paths:
       - '!*.md'
-
   pull_request:
     branches: [ master ]
     paths:
